# axis

./: .coveragerc  .pre-commit-config.yaml  CONTRIBUTING.md  COPILOT_QUICK_START.md  LICENSE  NEXT_PHASE_PLANNING.md  README.md  dependencies.py  pyproject.toml  requirements-test.txt  requirements.txt  setup.cfg  setup.py  setup.sh  test_device.py  test_metadata.py
.github/: aiohttp-performance-matrix.md  copilot-instructions.md  final-architecture-signoff.md  ha-core-notes-169953.md  httpx-removal-implementation-plan.md  mock-consolidation-architecture.md  mock-fixture-pilot-summary.md  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: copilot-ask.md
.github/agents/: axis-review-verify.agent.md  axis-review.agent.md
.github/workflows/: pythonpublish.yml  tests.yml
axis/: __init__.py  __main__.py  api.py  api_discovery.py  applications.py  basic_device_info.py  configuration.py  device.py  door_control.py  errors.py  event.py  event_instances.py  event_services.py  event_stream.py  fence_guard.py  ffmpeg.py  light_control.py  loitering_guard.py  motion_guard.py  mqtt.py  param_cgi.py  port_cgi.py  port_management.py  ptz.py  pwdgrp_cgi.py  rtsp.py  stream.py  stream_manager.py  stream_profiles.py  stream_transport.py  streammanager.py  user_groups.py  utils.py  vapix.py  view_areas.py  vmd4.py  websocket.py
axis/applications/: __init__.py  api.py  applications.py  fence_guard.py  guard_suite_base.py  loitering_guard.py  motion_guard.py  object_analytics.py  vmd4.py
axis/cli/: __init__.py  main.py
axis/cli/core/: __init__.py  context.py  contracts.py  gateway.py  io.py  registry.py  router.py
axis/cli/packs/: __init__.py  accounts.py  api.py  devices.py  events.py  navigation.py
axis/interfaces/: __init__.py  aiohttp_digest.py  api_discovery.py  api_handler.py  audio.py  audio_device_control.py  basic_device_info.py  event_instances.py  event_manager.py  light_control.py  mqtt.py  pir_sensor_configuration.py  port_cgi.py  port_management.py  ptz.py  pwdgrp_cgi.py  stream_profiles.py  temperature_control.py  topic_normalizer.py  user_groups.py  vapix.py  view_areas.py
axis/interfaces/applications/: application_handler.py  applications.py  fence_guard.py  loitering_guard.py  motion_guard.py  object_analytics.py  vmd4.py
axis/interfaces/events/: __init__.py  event_extension_contracts.py  event_instances.py  event_manager.py  transport_capabilities.py  transport_manager.py  unique_id_migration.py
axis/interfaces/parameters/: audio.py  brand.py  image.py  param_cgi.py  param_handler.py  properties.py
axis/models/: api.py  api_discovery.py  audio.py  audio_device_control.py  basic_device_info.py  configuration.py  event.py  event_instance.py  light_control.py  mqtt.py  pir_sensor_configuration.py  port_cgi.py  port_management.py  ptz_cgi.py  pwdgrp_cgi.py  stream_profile.py  temperature_control.py  user_group.py  view_area.py
axis/models/applications/: __init__.py  application.py  fence_guard.py  loitering_guard.py  motion_guard.py  object_analytics.py  vmd4.py
axis/models/events/: __init__.py  event.py  event_instance.py  subscription_contracts.py  topic_filter.py  transport_capabilities.py
axis/models/parameters/: audio.py  brand.py  io_port.py  param_cgi.py  properties.py  ptz.py  stream_profile.py
axis/ptz/: __init__.py  ptz.py
axis/vapix/: __init__.py  api.py  api_discovery.py  event_instances.py  light_control.py  mqtt.py  param_cgi.py  port_cgi.py  port_management.py  pwdgrp_cgi.py  stream_profiles.py  vapix.py  view_areas.py
axis/vapix/applications/: api.py  applications.py  motion_guard.py  object_analytics.py
axis/vapix/interfaces/: api.py  api_discovery.py  api_handler.py  basic_device_info.py  event_instances.py  light_control.py  mqtt.py  param_cgi.py  pir_sensor_configuration.py  port_cgi.py  port_management.py  ptz.py  pwdgrp_cgi.py  stream_profiles.py  user_groups.py  view_areas.py
axis/vapix/interfaces/applications/: __init__.py  api.py  application_handler.py  applications.py  fence_guard.py  loitering_guard.py  motion_guard.py  object_analytics.py  vmd4.py
axis/vapix/interfaces/parameters/: __init__.py  brand.py  image.py  io_port.py  param_cgi.py  param_handler.py  properties.py  ptz.py  stream_profile.py
axis/vapix/models/: api.py  api_discovery.py  basic_device_info.py  event_instance.py  light_control.py  mqtt.py  param_cgi.py  pir_sensor_configuration.py  port_cgi.py  port_management.py  ptz_cgi.py  pwdgrp_cgi.py  stream_profile.py  user_group.py  view_area.py
axis/vapix/models/applications/: __init__.py  api.py  application.py  fence_guard.py  loitering_guard.py  motion_guard.py  object_analytics.py  vmd4.py
axis/vapix/models/parameters/: __init__.py  brand.py  image.py  io_port.py  param_cgi.py  ptz.py  (+2 more)
tests/: __init__.py  conftest.py  event_fixtures.py  http_route_mock.py  mock_device_binding.py  mock_response_builder.py  packet_fixtures.py  ptz.py  respx_shim.py  ruff.toml  test_api_discovery.py  test_api_handler.py  test_applications.py  test_auth_scheme.py  test_basic_device_info.py  test_cli_direct.py  test_configuration.py  test_conftest.py  test_device.py  test_door_control.py  test_event.py  test_event_extension_contracts.py  test_event_instances.py  test_event_instances_protocol_parity.py  test_event_manager_extensions.py  test_event_services.py  test_event_stream.py  test_event_topic_filter.py  test_fence_guard.py  test_http_client_compat.py  test_light_control.py  test_loitering_guard.py  test_main_http_client.py  test_motion_guard.py  test_mqtt.py  test_param_cgi.py  test_pir_sensor_configuration.py  test_port_cgi.py  test_port_management.py  test_ptz.py  (+14 more)
tests/applications/: __init__.py  test_applications.py  test_fence_guard.py  test_loitering_guard.py  test_motion_guard.py  test_object_analytics.py  test_vmd4.py
tests/cli/: test_cli.py  test_cli_core_and_packs.py  test_cli_direct.py
tests/parameters/: __init__.py  test_brand.py  test_image.py  test_io_port.py  test_param_cgi.py  test_properties.py  test_ptz.py  test_stream_profile.py
tests/ptz/: __init__.py  test_ptz.py
